2020-06-01  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-view.el (mime-display-header-hook): Define explicitly.

2020-05-30  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-vcard.el: Suppress byte compiler warning.

2020-05-30  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-bbdb.el: Removed.

	* SEMI-ELS: Likewise.

	* signature.el: Likewise.

2020-05-23  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	Use lexical binding.

	* mail-mime-setup.el: Likewise.

	* mime-bbdb.el: Likewise.

	* mime-edit.el: Likewise.

	* mime-image.el: Likewise.

	* mime-mac.el: Likewise.

	* mime-partial.el: Likewise.

	* mime-pgp.el: Likewise.

	* mime-play.el: Likewise.

	* mime-setup.el: Likewise.

	* mime-shr.el: Likewise.

	* mime-signature.el: Likewise.

	* mime-vcard.el: Likewise.

	* mime-view.el: Likewise.

	* mime-w3.el: Likewise.

	* semi-def.el: Likewise.

	* semi-setup.el: Likewise.

	* signature.el: Likewise.

2020-05-23  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* semi-setup.el (mime-setup-enable-epg): Default value is always
	t.

2020-05-23  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	Suppress byte-compiler's warnings.

	* semi-setup.el (insert-signature): Move autoload cookie to top
	level.

2020-05-23  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	Drop old platforms support, dependency on cl.el.  Now supported
	Emacsen are version 24 and later.

	* SEMI-ELS (semi-modules-to-compile): Remove postpet.el.

	* mime-edit.el: Assuse Emacs 24 or later.
	(mime-edit-help): Use help-print-return-message instead of
	print-help-return-message
	(mime-edit-insert-file-as-text, mime-edit-insert-file): Use
	called-interactively-p instead of interactive-p.
	(mime-edit-encrypt-pgp-recipients-keys): Now arguments are CONTEXT
	and RECIPIENTS.
	(mime-edit-encrypt-pgp-mime): Caller adjusted.

	* mime-image.el: Assume Emacs 24 or later.  Don't require cl.el,
	static.el

	* mime-pgp.el (mime-edit-make-boundary): Add autoload cookie.

	* mime-view.el: Assume Emacs 24 or later.
	(mime-view-mode): Don't use mime-message-structure