@@ -1,3 +1,15 @@
+2020-06-02  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
+
+	Strip use of function wrapping lambda.
+
+	* mail-mime-setup.el (mime-edit-split-message-sender-alist): Likewise.
+
+	* mime-edit.el (mime-edit-decode-single-part-in-buffer)
+	(mime-edit-split-and-send, replace-space-with-underline)
+	(mime-prompt-for-parameter): Likewise.
+
+	* mime-play.el (mime-echo-window-height, mime-play-entity): Likewise.
+
 2020-06-01  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
 
 	* mime-view.el (mime-display-header-hook): Define explicitly.
